<resources>
    <string name="app_name">XV de Piracicaba</string>
    <string name="title_activity_resultados">Resultados</string>
    <string name="informa_es">Informações</string>
    <string name="v_deos">Vídeos</string>
    <string name="not_cias">Notícias</string>
    <string name="agenda">Agenda</string>
    <string name="resultados">Resultados</string>
    <string name="voltar">Voltar</string>
    <string name="todo">TODO</string>
    <string name="paulista_a2_13_4">Paulista A2 13/4</string>
    <string name="ltimos_resultados">Últimos resultados</string>
    <string name="xv_piracicaba_0_x_0_inter_de_limeira">XV Piracicaba 0 x 0 Inter de Limeira</string>
    <string name="informacoes">Informações</string>
    <string name="logo_xv">TODO</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_second_maps">Map</string>
    <string name="title_activity_third_maps">Map</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
</resources>
